--- a/src/App.css
+++ b/src/App.css
@@ -1,34 +1,42 @@
 /* --------global ------------ */
+:root {
+  --primary-color: #ffa7c4;
+}
+
 button {
   border: none;
-  height: 38px;
+  height: 40px;
   border-radius: 12px;
-  font-size: 24px;
+  font-size: 18px;
   margin: 0 10px;
-  background-color: palevioletred;
+  background-color: #ffa7c4;
   color: rgb(61, 20, 99);
-  padding: 8px 15px;
+  padding: 4px 12px;
   outline: none;
+  border: 2px solid #ffa7c4;
 }
 button:active,
 button:hover {
-  border: 2px solid palevioletred;
-  background-color: rgb(204, 208, 247);
-  padding: 7px 13px;
+  border: 2px solid #ffa7c4;
+  background-color: #282c35;
+  color: #ffa7c4;
 }
-input {
+.flat-input {
   border: none;
-  border-bottom: 2px solid palevioletred;
+  border-bottom: 2px solid #ffa7c4;
   height: 30px;
   font-size: 24px;
   outline: none;
   padding: 4px 8px;
 }
+.error {
+  color: rgb(224, 62, 50);
+}
 
 /* ----------navbar ------ */
 .nav {
   height: 64px;
-  background-color: palevioletred;
+  background-color: #ffa7c4;
 }
 .navWrapper {
   width: 80%;
@@ -44,7 +52,7 @@ input {
 .header a,
 .navIcon a {
   text-decoration: none;
-  color: rgb(61, 20, 99);
+  color: #282c35;
 }
 
 .header a {
@@ -70,7 +78,7 @@ input {
 .wrapper {
   width: 90%;
   margin: 30px auto;
-  background-color: azure;
+  /* background-color: azure; */
 }
 .add-item {
   width: 100%;
@@ -89,26 +97,37 @@ input {
   display: grid;
   grid-template-columns: 100%;
   grid-gap: 2%;
+  padding-bottom: 150px;
 }
 
 .showcase-item {
   position: relative;
-  background-color: burlywood;
+  cursor: pointer;
 }
 .showcase-item img {
+  height: 300px;
+  overflow: hidden;
   width: 100%;
   background-size: cover;
+  object-fit: cover;
+  background-position: 50%;
   background-repeat: no-repeat;
+  height: 100%;
+}
+.showcase-item:hover .img-highlight {
+  opacity: 1;
 }
 .img-highlight {
+  opacity: 0;
   position: absolute;
   bottom: 0px;
   width: calc(100% - 16px);
-  color: rgb(221, 86, 131);
-  background-color: rgb(214, 186, 240);
+  background-color: #ffa7c4;
+  color: #282c35;
   padding: 8px;
   display: flex;
   align-items: center;
+  transition: all 1s cubic-bezier(0, 0.71, 0, 1.01) 0.15s;
 }
 
 .img-detail {
@@ -142,10 +161,11 @@ input {
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.6);
+  background: #282c35b6;
 }
 
 .modal-main {
+  border-radius: 20px;
   position: fixed;
   background: white;
   width: 80%;
@@ -168,16 +188,77 @@ input {
 .add-item-form {
   text-align: center;
   width: 100%;
+  margin: auto;
 }
 .add-item-form input {
-  margin: 20px auto;
+  border: none;
+  border-bottom: 2px solid #ffa7c4;
+  height: 30px;
+  font-size: 24px;
+  outline: none;
+  padding: 4px 8px;
+}
+.add-item-form input {
+  margin: 0px auto 30px auto;
   display: flex;
   justify-content: center;
 }
 
 .add-button {
   width: 100%;
-  margin: 15px;
+  margin-top: 30px;
+  margin-bottom: 20px;
+}
+
+/* -------Item Detail ----------- */
+.item-detail {
+  padding: 20px;
+}
+.item-img {
+  position: relative;
+}
+.item-img img {
+  max-height: 500px;
+  overflow: hidden;
+  width: 100%;
+  background-size: cover;
+  object-fit: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  height: 100%;
+}
+.img-helper {
+  position: absolute;
+  bottom: 10px;
+  right: 0px;
+  color: #282c35;
+  padding: 8px;
+  /* display: flex; */
+  color: white;
+  align-items: center;
+  transition: all 1s cubic-bezier(0, 0.71, 0, 1.01) 0.15s;
+}
+.img-overview {
+  display: flex;
+  align-items: center;
+  background-color: #ffa7c4;
+  padding: 8px;
+  flex-wrap: wrap;
+}
+
+/* ------------pagiantion--------------- */
+.pagination {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+.pagination button {
+  margin: 1px;
+}
+
+.img-like {
+  cursor: pointer;
 }
 
 /* -------Media Queries ------------- */
@@ -192,6 +273,9 @@ input {
   .add-item input {
     width: auto;
   }
+  .item-detail {
+    padding: 20px 40px;
+  }
 }
 
 @media screen and (min-width: 900px) {
@@ -201,5 +285,8 @@ input {
   }
   .wrapper {
     width: 70%;
+  }
+  .item-detail {
+    padding: 30px 20%;
   }
 }
