--- a/src/App.css
+++ b/src/App.css
@@ -29,6 +29,14 @@ button:hover {
   outline: none;
   padding: 4px 8px;
 }
+.round-input {
+  border: 2px solid #ffa7c4;
+  padding: 4px 8px;
+  margin: 10px;
+  height: 30px;
+  font-size: 24px;
+  border-radius: 20px;
+}
 .error {
   color: rgb(224, 62, 50);
 }
